# cv

./: Cargo.toml  Dioxus.toml  Makefile
.github/workflows/: deploy.yaml
assets/: Daniel Mason CV - abstract.pdf.br  bg1.jpg.br  site.css  site.css.br
docs/: Daniel Mason CV - abstract.pdf.br  bg2.jpg.br  index.html  reset.css.br  site.css  site.css.br
docs/assets/dioxus/: daniel-mason-cv.js  daniel-mason-cv.js.br  daniel-mason-cv_bg.wasm  daniel-mason-cv_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-9ac3b5e174d5b843/: inline0.js  inline0.js.br
src/: lib.rs  main.rs
src/components/: header.rs  mod.rs  section.rs
src/content/: contact_details.rs  education.rs  experience.rs  mod.rs  personal_statement.rs  skills.rs
src/transforms/: mod.rs
