[package]
name = "daniel-mason-cv"
version = "0.1.0"
authors = ["Daniel Mason <daniel@danielmason.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", features = ["web", "router"] }
indoc = "2.0.5"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
